--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ Last Update: March 14, 2019
     21.0 CTA Area CSS
 --------------------------------------------- */
 /* Import Fonts & All CSS */
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 @import url(css/bootstrap.min.css);
 @import url(css/animate.css);
 @import url(css/default-assets/classy-nav.css);
@@ -69,7 +69,7 @@ Last Update: March 14, 2019
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 16px;
   position: relative;
@@ -82,7 +82,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #111343;
   line-height: 1.25;
   font-weight: 600;
@@ -471,6 +471,20 @@ input:required {
 .section-padding-100-0 {
   padding-top: 100px;
   padding-bottom: 0;
+}
+
+/* Extra spacing for sections and buttons */
+.speakers-section {
+  padding-bottom: 150px; /* Increase bottom padding for spacing between sections */
+}
+
+.view-all-speakers-btn {
+  margin-top: 60px; /* Increase top margin for the button */
+}
+
+/* Space between conference stats sections */
+.conference-stats-section {
+  padding-top: 80px;
 }
 
 /* :: 3.0 Preloader Area CSS */
@@ -3131,7 +3145,7 @@ input:required {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .our-schedule-area .schedule-tab .nav-tabs .nav-item .nav-link {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -3822,3 +3836,16 @@ input:required {
 }
 
 /*# sourceMappingURL=style.css.map */
+.footer-widget p {
+  color: #aaa;
+  margin-bottom: 0;
+}
+
+.copyright p {
+  color: #aaa;
+  margin-bottom: 0;
+}
+
+.feature-cards .col-md-6 {
+  margin-bottom: 12px;
+}
